removing overflow and fixing body

--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,6 @@ table {
 body {
   background-color: grey;
   width: 100%;
-  overflow: hidden;
 }
 body .document {
   margin: 0 auto;
