--- a/less/global.less
+++ b/less/global.less
@@ -1,7 +1,6 @@
 body{
     background-color: grey;
     width: 100%;
-    overflow: hidden;
     .document{
         margin: 0 auto;
         width: 70%;
